--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   animate_do: ^4.2.0
+  firebase_auth: ^5.5.2
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
