--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animate_do: ^4.2.0
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
