--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
   google_sign_in: ^6.3.0
+  just_audio: ^0.10.1
+  audio_session: ^0.2.1
 
 dev_dependencies:
   flutter_test:
