--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="emotion_music_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <service android:name="com.ryanheise.audioservice.AudioService" android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -24,6 +25,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT"/>      
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="yourappscheme" android:host="callback"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
