--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   just_audio: ^0.10.1
   audio_session: ^0.2.1
   http: ^1.4.0
+  scrollable_positioned_list: ^0.3.8
+  provider: ^6.1.5
+  supabase_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
